==============================================================
1.0.1 [2024/08/23]
==============================================================
 - fixed bugs (JJDai54/goffy)

==============================================================
1.0 [2024/06/29 13:11:46]
==============================================================
 - Original release wgfilemanager (Goffy - Wedega)