@@ -47,7 +47,10 @@ $GLOBALS['xoopsTpl']->assign('wgfilemanager_upload_url', \WGFILEMANAGER_UPLOAD_U
 //preferences
 $GLOBALS['xoopsTpl']->assign('table_type', $helper->getConfig('table_type'));
 $GLOBALS['xoopsTpl']->assign('panel_type', $helper->getConfig('panel_type'));
-$GLOBALS['xoopsTpl']->assign('indexDirPosition', $helper->getConfig('indexdirposition'));
+$indexDirPosition = (string)$helper->getConfig('indexdirposition');
+$GLOBALS['xoopsTpl']->assign('indexDirPosLeft', 'left' === $indexDirPosition);
+$GLOBALS['xoopsTpl']->assign('indexDirPosTop', 'top' === $indexDirPosition);
+$GLOBALS['xoopsTpl']->assign('indexDirPosNone', 'none' === $indexDirPosition);
 $GLOBALS['xoopsTpl']->assign('useBroken', (bool)$helper->getConfig('use_broken'));
 $iconSet = $helper->getConfig('iconset');
 // Keywords
