@@ -1,0 +1,1 @@
+<{include file='db:wgfilemanager_index_dirlist_default.tpl' directory=$block}>
