@@ -1,6 +1,7 @@
 ==============================================================
 1.0.1 [2024/08/23]
 ==============================================================
+ - added block for directory list (goffy)
  - fixed bugs (JJDai54/goffy)
 
 ==============================================================
